# mbse

./: .gitignore  pyproject.toml
backup/: .gitignore  pyproject.toml
backup/.atl/: skill-registry.md
backup/.devcontainer/: Dockerfile
backup/example_hsm/: CMakeLists.txt  edf_config.h.in
backup/example_hsm/doc/: edf.md
backup/example_hsm/edf_test/: CMakeLists.txt
backup/example_hsm/edf_test/doc/: edf_test.md
backup/example_hsm/edf_test/inc/: edf_test.h
backup/example_hsm/edf_test/src/: edf_test.c
backup/example_hsm/examples/: CMakeLists.txt
backup/example_hsm/examples/arm_cortex_m_preemption_example/: CMakeLists.txt
backup/example_hsm/examples/arm_cortex_m_preemption_example/doc/: arm_cortex_m_preemption_example.md
backup/example_hsm/examples/arm_cortex_m_preemption_example/inc/: app.h  exec_timer.h  gpio_trace.h  stm32f103c8tx_registers.h  tick_timer.h
backup/example_hsm/examples/arm_cortex_m_preemption_example/src/: app.c  exec_timer.c  gpio_trace.c  main.c  tick_timer.c
backup/example_hsm/examples/fuzz_example/: CMakeLists.txt
backup/example_hsm/examples/fuzz_example/doc/: fuzz_example.md
backup/example_hsm/examples/fuzz_example/inc/: fuzz_example.h
backup/example_hsm/examples/fuzz_example/src/: fuzz_example.c  main.c
backup/example_hsm/inc/: edf.h  edf_active_object.h  edf_event.h  edf_event_queue.h  edf_fuzz.h  edf_hsm.h  edf_pool.h  edf_time_event.h
backup/example_hsm/src/: CMakeLists.txt
backup/example_hsm/src/core/: CMakeLists.txt
backup/example_hsm/src/core/baremetal/: CMakeLists.txt
backup/example_hsm/src/core/os/: CMakeLists.txt
backup/example_hsm/src/core/rtos/: CMakeLists.txt
backup/example_hsm/src/framework/: CMakeLists.txt
backup/example_hsm/src/framework/inc/: edf_framework.h
backup/example_hsm/src/framework/src/: edf_active_object.c  edf_event.c  edf_event_queue.c  edf_framework.c  edf_hsm.c  edf_pool.c  edf_time_event.c
backup/example_hsm/test/: CMakeLists.txt
backup/example_hsm/test/event_delivery/: CMakeLists.txt
backup/example_hsm/test/event_delivery/doc/: test_event_delivery.md
backup/example_hsm/test/event_delivery/inc/: active_object.h
backup/example_hsm/test/event_delivery/src/: active_object.c  test_event_delivery.c
backup/example_hsm/test/hsm/: CMakeLists.txt
backup/example_hsm/test/hsm/doc/: test_hsm.md
backup/example_hsm/test/hsm/inc/: hsm.h
backup/example_hsm/test/hsm/src/: hsm.c  test_hsm.c
backup/example_hsm/test/time_event/: CMakeLists.txt
backup/example_hsm/test/time_event/doc/: test_time_event.md
backup/example_hsm/test/time_event/inc/: time_mgr.h
backup/example_hsm/test/time_event/src/: test_time_event.c  time_mgr.c
backup/openspec/: config.yaml
backup/openspec/changes/archive/2026-05-27-generated-hsm-engine/: apply-progress.md  archive-report.md  design.md  exploration.md  proposal.md  tasks.md  verify-report.md
backup/openspec/changes/archive/2026-05-27-graphviz-compound-state-visual-fix/: apply-progress.md  archive-report.md  design.md  exploration.md  proposal.md  (+2 more)
backup/openspec/specs/generated-hsm-engine/: spec.md
backup/openspec/specs/graphviz-svg-workbench/: spec.md
backup/openspec/specs/hsm-json-graphviz-rendering/: spec.md
backup/tests/support/: viewer_browser_harness.py
backup/tests/unit/mbse/: test_hsm_definition_module.py  test_hsm_runtime.py  test_hsm_validation.py  test_runtime_module_layout.py  test_viewer_package_surface.py
(+249 files in other folders)
